--- a/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/becomeRenter.html
+++ b/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/becomeRenter.html
@@ -3,25 +3,25 @@
         <div class="userSideBar">
             <br />
             <a>save spot for image<img /></a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
-            <a ng-click="getUserReviews()"  ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
+            <a ng-click="getUserReviews()"  ng-href="yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
         </div>
         <div class="renterProfileContent">
             User Name: <input type="text" />
             Password: <input type="password" />
             <br />
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/yourApartments.html" ng-click="becomeRenter()">Join Us</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/yourApartments.html" ng-click="becomeRenter()">Join Us</a>
         </div>
     </div>
     <div ng-switch-when="1">
         <div class="renterSideBar">
             <br />
             <a>save spot for image<img /></a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/userApartments.html">My apartments</a>
-            <a ng-click="getUserReviews()"  ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/userApartments.html">My apartments</a>
+            <a ng-click="getUserReviews()"  ng-href="yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
         </div>
         <h1>Youre a renter</h1>
         <a ng-href="/index.html">Go Back</a>
