--- a/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/editAccount.html
+++ b/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/editAccount.html
@@ -2,9 +2,9 @@
     <div ng-switch-when="0">
         <div class="userSideBar">
             <br />
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
-            <a ng-click="getUserReviews()"  ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
+            <a ng-click="getUserReviews()"  ng-href="yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
             <a ng-href="/index.html"><span ng-click="deleteUser()">Delete User</span></a>
         </div>
         <div class="userProfileContent">
@@ -21,7 +21,7 @@
             Country: <select ng-model="$parent.editCountryID" required id="countrySelect">
                 <option ng-repeat="country in countries track by $index" ng-value="country.countryID">{{country.countryName}}</option>
             </select><br />
-             <a ng-href="#!yourProfile/{{userDetails.userName}}.html"><span ng-click="editAccount()">Save</span></a>
+             <a ng-href="yourProfile/{{userDetails.userName}}.html"><span ng-click="editAccount()">Save</span></a>
 
         </div>
     </div>
@@ -30,10 +30,10 @@
         <div class="renterSideBar">
             <br />
             <a>save spot for image<img /></a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/userApartments.html">My apartments</a>
-            <a ng-click="getUserReviews()"  ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/userApartments.html">My apartments</a>
+            <a ng-click="getUserReviews()"  ng-href="yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
             <a ng-href="/index.html"><span ng-click="deleteUser()">Delete User</span></a>
             <a ng-href="/index.html"><span ng-click="deleteRenterStatus()">Stop being a renter</span></a>
 
@@ -52,7 +52,7 @@
             Country: <select ng-model="$parent.editCountryID" required id="countrySelect">
                 <option ng-repeat="country in countries track by $index" ng-value="country.countryID">{{country.countryName}}</option>
             </select><br />
-            <a ng-href="#!yourProfile/{{userDetails.userName}}.html"><span ng-click="editAccount()">Save</span></a>
+            <a ng-href="yourProfile/{{userDetails.userName}}.html"><span ng-click="editAccount()">Save</span></a>
 
         </div>
     </div>
