--- a/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/myReviews.html
+++ b/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/myReviews.html
@@ -3,9 +3,9 @@
         <div class="userSideBar">
             <br />
             <a>save spot for image<img /></a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
         </div>
         <div class="userProfileContent">
             <div ng-repeat="review in userDetails.reviews">
@@ -29,10 +29,10 @@
         <div class="renterSideBar">
             <br />
             <a>save spot for image<img /></a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/userApartments.html">My apartments</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/userApartments.html">My apartments</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
         </div>
         <div class="renterProfileContent">
             <div ng-repeat="review in userDetails.reviews track by $index">
