--- a/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/yourProfile.html
+++ b/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/yourProfile.html
@@ -3,9 +3,9 @@
         <div class="userSideBar">
             <br />
             <a>save spot for image<img /></a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
-            <a ng-click="getUserReviews()" ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
-            <a ng-click="getUserOrders()" ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">View purchses</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
+            <a ng-click="getUserReviews()" ng-href="yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-click="getUserOrders()" ng-href="yourProfile/{{userDetails.userName}}/myOrders.html">View purchses</a>
         </div>
 
     </div>
@@ -13,10 +13,10 @@
         <div class="renterSideBar">
             <br />
             <a>save spot for image<img /></a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
-            <a ng-href="#!yourProfile/{{userDetails.userName}}/userApartments.html">My apartments</a> 
-            <a ng-click="getUserReviews()" ng-href="#!yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
-            <a ng-click="getUserOrders()" ng-href="#!yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/editAccount.html">Edit account</a>
+            <a ng-href="yourProfile/{{userDetails.userName}}/userApartments.html">My apartments</a> 
+            <a ng-click="getUserReviews()" ng-href="yourProfile/{{userDetails.userName}}/myReviews.html">My Reviews</a>
+            <a ng-click="getUserOrders()" ng-href="yourProfile/{{userDetails.userName}}/myOrders.html">History of purchses</a>
 
         </div>
     </div>
