--- a/Apartrent_Try1/Apartrent_Try1/wwwroot/RenterDashBoard/pendingOrders.html
+++ b/Apartrent_Try1/Apartrent_Try1/wwwroot/RenterDashBoard/pendingOrders.html
@@ -33,8 +33,8 @@
                     {{orders.price}}<br />
 
                 </a>
-                <button ng-click="changeOrderStatus($index,orders,true)">Approve</button>
-                <button ng-click="changeOrderStatus($index,orders,false)">Decline</button>
+                <button ng-click="changeOrderStatus(orders,true)">Approve</button>
+                <button ng-click="changeOrderStatus(orders,false)">Decline</button>
             </div>
         </div>
     </div>
