--- a/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/myOrders.html
+++ b/Apartrent_Try1/Apartrent_Try1/wwwroot/UserDashBoard/myOrders.html
@@ -39,14 +39,16 @@
         <div>
             <div class="renterProfileContent" ng-repeat="orders in userDetails.orders track by $index">
                 <a>
-                    {{orders.renterUserName}}
-                    {{orders.fromDate}}
-                    {{orders.toDate}}
-                    {{orders.orderDate}}
-                    {{orders.price}}
-                    <span ng-if="orders.approved = null">Pending</span>
-                    <span ng-if="orders.approved = true">Approved!</span>
-                    <span ng-if="orders.approved = false">Declined</span>
+                    {{orders.renterUserName}}<br />
+                    {{orders.fromDate}}<br />
+                    {{orders.toDate}}<br />
+                    {{orders.orderDate}}<br />
+                    {{orders.price}}<br />
+                    <span ng-switch="orders.approved">
+                        <span ng-switch-when="null">Pending</span>
+                        <span ng-switch-when="true">Approved!</span>
+                        <span ng-switch-when="false">Declined</span>
+                    </span>
                 </a>
             </div>
         </div>
