--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/home.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/home.html
@@ -1,18 +1,16 @@
-﻿
-<div>
+﻿<form class="w3-center w3-row w3-padding-16 w3-round" style="width:100%">
     <h3>Where would you like to travel?</h3>
-    <select ng-disabled="errorMessageDisplay" ng-model="searchCountryID" required id="countrySelect">
+    <h4>Select Country:</h4>
+    <select class="w3-select w3-mobile w3-cell w3-border w3-hover-border-yellow"  style="width:22%" ng-disabled="errorMessageDisplay" ng-model="searchCountryID">
         <option ng-repeat="country in countries track by $index" ng-value="country.countryID">{{country.countryName}}</option>
     </select>
     <br />
     <br />
-    Check in: <input ng-model="searchCheckIn" min="{{fromDate | date:'yyyy-MM-dd'}}" type="date" />
+    <h4>Check in:</h4> <input class="w3-input w3-mobile w3-cell w3-hover-border-yellow" style="width:22%" ng-model="searchCheckIn" min="{{fromDate | date:'yyyy-MM-dd'}}" type="date" />
     <br /><br />
-    Check Out:<input min="{{searchCheckIn | date:'yyyy-MM-dd'}}" type="date" ng-model="searchCheckOut" /> 
+    <h4>Check Out:</h4><input class="w3-input w3-mobile w3-cell w3-hover-border-yellow" style="width:22%" min="{{searchCheckIn | date:'yyyy-MM-dd'}}" type="date" ng-model="searchCheckOut" />
     <br />
     <br />
-    Guests: <input ng-disabled="errorMessageDisplay" type="range" min="1" max="20" step="1" ng-model="searchGuests" /><p>{{searchGuests}}</p>
-    <a ui-sref="SearchResult({countryID:searchCountryID,fromDate:searchCheckIn.toDateString(),toDate:searchCheckOut.toDateString(),guests:searchGuests})">Send</a>
-</div>
-
-<!--<a ng-click="searchApartment(searchCountryID,searchCheckIn,searchCheckOut,searchGuests)" ui-sref="SearchResult({countryName: countries[searchCountryID-1].countryName})">Send</a>-->
+    <h4>Guests:</h4> <input class="w3-mobile w3-input w3-cell w3-hover-border-yellow" style="width:22%" ng-disabled="errorMessageDisplay" type="range" min="1" max="20" step="1" ng-model="searchGuests" /><span>{{searchGuests}}</span><br /><br />
+    <a class="w3-button w3-purple w3-round w3-hover-blue" ui-sref="SearchResult({countryID:searchCountryID,fromDate:searchCheckIn.toDateString(),toDate:searchCheckOut.toDateString(),guests:searchGuests})">Send</a>
+</form>
